--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
   crossorigin="anonymous"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Nonsense Generator</title>
 </head>
 <body>
   <div class="container">
