styling fixes more fixes

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
   <title>Nonsense Generator</title>
 </head>
 <body>
+  <!-- <div class="gbc">
+    <img class="gc" src="./images/gc.png" alt="">
+    <img class="py" src="./images/walk.webp" alt="">
+  </div> -->
   <div class="container">
     <div class="useless">
       <h4>count++;</h4>
