--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
   integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
   crossorigin="anonymous"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Nonsense Generator</title>
+  <title>
+    -Nonsense Generator-
+  </title>
 </head>
 <body>
-  <!-- <div class="gbc">
-    <img class="gc" src="./images/gc.png" alt="">
-    <img class="py" src="./images/walk.webp" alt="">
-  </div> -->
+  <div class="megatron">
+    <img class="megatronimg" src="./images/bobfire2.webp" alt="">
+  </div>
   <div class="container">
     <div class="useless">
       <h4>count++;</h4>
@@ -35,12 +36,17 @@
       <img class="spark2" src="./images/spark.gif" alt="smoke over fire">
       <img class="bigfire" src="./images/bigfire.gif" alt="smoke over fire">
       <img class="bigfire1" src="./images/bigfire.gif" alt="smoke over fire">
+      <img class="tear" src="./images/tear.png" alt="robot tear">
       <div id="count" class="count"></div>
         <div class="countcont">
           <!-- <img class="fire" src="../images/fire.gif" alt="fire over quote counter"> -->
           <img class="robogif flip" src="./images/trimrobo.gif"></img><img class="robogif1" src="./images/robot.gif"/>
         </div>
-      <h1>-Nonsense Generator-</h1>
+        <div class="titlecont">
+          <h1 class="title1">Nonsense</h1>
+          <h1 class="title2">Generator</h1>
+        </div>
+      <!-- <h1>-Nonsense Generator-</h1> -->
       </div>
     <div class="ui">
       <div class="thread">
@@ -50,7 +56,10 @@
     <div class="inputfield">
       <form class="form" name="sendmessage" action="">
         <input class="input" type="text" id="usermsg" placeholder="Ask away..."/>
-        <div class="btncont"><button type="submit" class="button" id="submitmsg">Send ✉️</button><button id="clear" class="button2">Clear 🔫</button></div>
+        <div class="btncont">
+          <button type="submit" class="button" id="submitmsg">Send ✉️</button>
+          <button id="clear" class="button2">Clear 🔫</button>
+        </div>
     </form>
     </div>
   </div>
