added megatron working

--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
   </title>
 </head>
 <body>
+  <!-- <h4 class="megabanner">MEGRATON</h4> -->
   <div class="megatron">
-    <img class="megatronimg" src="./images/bobfire2.webp" alt="">
+    <img class="megatronimg" src="./images/sleep.gif" alt="">
   </div>
   <div class="container">
     <div class="useless">
@@ -65,3 +66,4 @@
   </div>
 </body>
 </html>
+
