--- a/client/index.html
+++ b/client/index.html
@@ -11,7 +11,7 @@
   crossorigin="anonymous"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>
-    -Nonsense Generator-
+    -Quote Roller-
   </title>
 </head>
 <body>
@@ -44,8 +44,8 @@
           <img class="robogif flip" src="./images/trimrobo.gif"></img><img class="robogif1" src="./images/robot.gif"/>
         </div>
         <div class="titlecont">
-          <h1 class="title1">Nonsense</h1>
-          <h1 class="title2">Generator</h1>
+          <h1 class="title1">Quote</h1>
+          <h1 class="title2">Roller</h1>
         </div>
       <!-- <h1>-Nonsense Generator-</h1> -->
       </div>
